Changelog for msDiscount.

1.1.1-pl
==============
- Support of MS2 multi-categories.
- Price after discount can`t be less that 0.

1.1.0-pl
==============
- Ability to add discounts for product category.
- Disposable discount coupons.
- Improved manager pages.

1.0.5-pl
==============
- Added dependence from miniShop2 in the installer.

1.0.4-pl
==============
- Compatibility with MODX 2.3.
- Small UI fixes.

1.0.3-pl
==============
- Added price formatting

1.0.2-pl
==============
- Added Buy Now snippet.

1.0.1-pl
==============
- Fixed comparison of percents.

1.0.0-pl
==============
- Improved install script.

1.0.0-beta
==============
- Initial release.