@@ -6,3 +6,5 @@ $_lang['msdiscount_prop_sortBy'] = 'Поле сортировки.';
 $_lang['msdiscount_prop_sortDir'] = 'Направление сортировки.';
 $_lang['msdiscount_prop_tpl'] = 'Чанк оформления каждого ряда Предметов.';
 $_lang['msdiscount_prop_toPlaceholder'] = 'Усли указан этот параметр, то результат будет сохранен в плейсхолдер, вместо прямого вывода на странице.';
+$_lang['msdiscount_prop_frontend_css'] = 'Файл с css стилями для подключения на фронтенде.';
+$_lang['msdiscount_prop_frontend_js'] = 'Файл с javascript для подключения на фронтенде.';
